Archive2/70/c5184d398cfa3c/output
main.cpp:1:1: error: 'asdf' does not name a type
 asdf
 ^
aas2
